[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "bflb-efuse-tool"
version = "0.0.1"
authors = [
  { name="Josuah Demangeon", email="me@josuah.net" },
]
description = "Manipulate efuses file, toggle flags, apply masks..."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/josuah/bflb-efuse-tool"
Issues = "https://github.com/josuah/bflb-efuse-tool/issues"

[project.scripts]
bflb-efuse-tool = "bflb_efuse_tool:main"
